--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ a:hover{
 
 
 header{
-    width:100% !important;
+	width:100% !important;
 }
 
 .navbar{
@@ -172,6 +172,12 @@ header{
 
 #promo{
     padding: 40px 10px 0 10px;
+}
+
+.promo-card{
+	background: url('../images/home/parallax-bg.png') no-repeat center;
+	background-size: cover;
+	padding: 120px;
 }
 
 #promo h1, #promo h3, #promo p{
@@ -591,4 +597,25 @@ footer{
 }
 .info p{
 	margin:0;
+}
+
+@media screen and (max-width:784px){
+	#presentation{
+		padding-bottom: 40px;
+	}
+	#presentation .blue_side > img{
+		position: initial;
+		padding: 0;
+	}
+	#presentation .main-title{
+		padding-left: 0;
+		margin-left: 0;
+		width: 100%;
+	}
+	#presentation p{
+		width: 100%;
+	}
+	.promo-card{
+		padding: 50px;
+	}
 }
