--- a/css/style.css
+++ b/css/style.css
@@ -59,12 +59,17 @@ a:hover{
 
 header{
 	width:100% !important;
+	position: fixed;
+	top:0;
+	z-index: 9000;
+	box-shadow: 0px 6px 7px -4px rgba(0,0,0,0.32);
 }
 
 .navbar{
     width:100% !important;
 	background: #fff !important;
 	padding: 25px;
+	
 }
 
 .navbar-nav .nav-link{
