--- a/css/style.css
+++ b/css/style.css
@@ -63,13 +63,18 @@ header{
 	top:0;
 	z-index: 9000;
 	box-shadow: 0px 6px 7px -4px rgba(0,0,0,0.32);
+	background: rgb(255, 255, 255) !important;
 }
 
 .navbar{
     width:100% !important;
-	background: #fff !important;
 	padding: 25px;
-	
+}
+
+.navbar-toggler:focus{
+	outline: none;
+	border: 1px solid var(--primary-color);
+	transition: .7s;
 }
 
 .navbar-nav .nav-link{
@@ -80,6 +85,10 @@ header{
 .navbar-nav .nav-link:hover{
     color: var(--primary-color) !important;
     transition:0.5s;
+}
+
+.nav-item{
+	margin-bottom: 15px;
 }
 
 .h_fa{
@@ -469,7 +478,7 @@ header{
 	z-index: 1
 }
 
-/**PROMO*****************************************/
+/**NEWS*****************************************/
 
 
 #news{
@@ -477,6 +486,7 @@ header{
 }
 .card-info{
 	border:none;
+	margin-bottom: 10px
 }
 
 .card-info img{
@@ -488,10 +498,17 @@ header{
 	padding: 7px 10px;
 }
 
+.news-info{
+	padding: 7px 30px 0 30px;
+}
+
+.news-info p{
+	padding: 0;
+}
+
 .btn_more{
 	margin: 0 auto;
 	text-align: left;
-	transition: 0.5s;
 }
 
 .btn_more:hover{
@@ -501,7 +518,8 @@ header{
 
 .btn_more:hover .fa-arrow-right{
 	padding-left: 10px;
-	transition:0.5s;
+	color: var(--primary-color);
+	transition: .5s;
 }
 
 /**UPDATE*****************************************/
@@ -611,19 +629,35 @@ footer{
 	#presentation{
 		padding-bottom: 40px;
 	}
+
 	#presentation .blue_side > img{
 		position: initial;
 		padding: 0;
 	}
+
 	#presentation .main-title{
 		padding-left: 0;
 		margin-left: 0;
 		width: 100%;
 	}
+
 	#presentation p{
 		width: 100%;
 	}
+
 	.promo-card{
 		padding: 50px;
+	}
+
+	.card_form{
+		padding: 0;
+	}
+
+	.btn_update{
+		margin-top:7px;
+	}
+
+	#footer{
+		padding: 3px !important;
 	}
 }
