--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@
 
 
 :root{
-    --primary-color:#384aeb;
-    --secondary-color:#abcddd;
-    --third-color:#002347;
+    --primary-color:rgb(231, 160, 26);
+    --secondary-color:rgba(182, 132, 39, 0.726);
+    --third-color:rgb(233, 132, 37);
     --fourth-color:#222222;
 }
 
@@ -595,15 +595,19 @@ footer{
 }
 
 #footer ul li a{
-	color: #8892a0 !important;
+	color: #fff !important;
 }
 
 #footer h4, #footer h5{
 	padding-bottom: 20px;
 }
 
+#footer p {
+	color: #fff;
+}
+
 .copy{
-	background: #05274b;
+	background:var(--primary-color);
 	margin: 0;
 	padding: 20px;
 	width: 100%;
@@ -621,6 +625,7 @@ footer{
 .info{
 	padding: 7px;
 }
+
 .info p{
 	margin:0;
 }
